Fix where button disable style doesn't render correctly on iPhone Safari
Bacon:test
Resolves:OKTA-85101

--- a/assets/sass/modules/_btns.scss
+++ b/assets/sass/modules/_btns.scss
@@ -10,6 +10,7 @@
   @include border-radius;
   font-size: $font-size;
   @include box-sizing(border-box);
+  -webkit-appearance: none;
 }
 
 .button-wide,
